linked social media icons to urls

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <script src="/js/app.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="js/app.js" charset="utf-8"></script>
@@ -56,7 +55,10 @@
 
             <div class="contact-text">
               <p>For any enquiries pleace contact me at:
-                <a href="mailto:emthomsonyoga@gmail.com%20?Subject=Yoga%20Enquiry">emthomsonyoga@gmail.com</a>.<br><br> Or check out my<a href="https://www.facebook.com/EmThomsonYoga/"> facebook</a> page!</p>
+                <a href="mailto:emthomsonyoga@gmail.com%20?Subject=Yoga%20Enquiry">emthomsonyoga@gmail.com</a>.<br><br> Or check out my social media!</p>
+
+                <a class="social-icons" href="https://www.facebook.com/EmThomsonYoga/"><span ><i class="fab fa-facebook"></i></span></a>
+                <a class="social-icons" href="https://www.instagram.com/em_c_thomson/?hl=en"><span><i class="fab fa-instagram"></i></span></a>
                 <p>Also available for private classes, group hire or corporate events - basically if you want yoga let's chat!</p>
             </div>
             <div class="contact-logo-container">
@@ -207,11 +209,13 @@
         <div class="mobile-container">
         <h1>Contact</h1>
 
-          <div class="contact-text">
-            <p>For any enquiries pleace contact me at:
-              <a href="mailto:emthomsonyoga@gmail.com%20?Subject=Yoga%20Enquiry">emthomsonyoga@gmail.com</a>.<br><br> Or check out my<a href="https://www.facebook.com/EmThomsonYoga/"> facebook</a> page!</p>
-              <p>Also available for private classes, group hire or corporate events - basically if you want yoga let's chat!</p>
-          </div>
+        <div class="contact-text">
+          <p>For any enquiries pleace contact me at:
+            <a href="mailto:emthomsonyoga@gmail.com%20?Subject=Yoga%20Enquiry">emthomsonyoga@gmail.com</a>.<br><br> Or check out my social media!</p>
+            <a class="social-icons" href="https://www.facebook.com/EmThomsonYoga/"><span ><i class="fab fa-facebook"></i></span></a>
+            <a class="social-icons" href="https://www.instagram.com/em_c_thomson/?hl=en"><span><i class="fab fa-instagram"></i></span></a>
+            <p>Also available for private classes, group hire or corporate events - basically if you want yoga let's chat!</p>
+        </div>
           <div class="contact-logo-container">
             <img class="contact-logo" src="css/images/logo2.jpg" alt="Yoga logo">
           </div>
