update tooting time

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <ul class="inline-b v-align margin-l-left">
                     <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                       <ul class="timings-list">
-                        <li>9:30am - 10:30am Vinyasa yoga</li>
+                        <li>Time subject to change due to scheduling clashes at the venue - please check my Facebook page each week for the exact time of the class</li>
                       </ul>
                     </li>
                   </ul>
@@ -293,7 +293,7 @@
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                   <ul class="timings-list">
-                    <li>9:30am - 10:30am Vinyasa yoga</li>
+                    <li>Time subject to change due to scheduling clashes at the venue - please check my Facebook page each week for the exact time of the class</li>
                   </ul>
                 </li>
               </ul>
