--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                 <p class="margin-s-left margin-s-top">Drop in price for SLSC members £5 non-members £8</p>
                 <div class="card-body about-list swirls">
                   <div id="tooting-image"></div>
-                  <ul class="inline-b v-align margin-l-left">
+                  <ul class="inline-b v-align margin-l-left quarter-width">
                     <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
-                      <ul class="timings-list">
+                      <ul>
                         <li>Time subject to change due to scheduling clashes at the venue - please check my Facebook page each week for the exact time of the class</li>
                       </ul>
                     </li>
