added new class

--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
                 <div class="card-body about-list swirls">
                   <div id="tooting-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
+                    <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
+                      <ul>
+                        <li>6:45pm - 7:45pm Candlelit vinyasa yoga</li>
+                      </ul>
+                    </li>
                     <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                       <ul>
                         <li>11:30am - 12:30pm Vinyasa yoga</li>
