added class to matchstick and added mobile view for candlelit

--- a/index.html
+++ b/index.html
@@ -135,12 +135,7 @@
                   <ul class="inline-b v-align margin-l-left">
                     <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                       <ul class="timings-list">
-                        <li>5:30pm - 6:30pm Vinyasa yoga</li>
-                      </ul>
-                    </li>
-                    <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
-                      <ul class="timings-list">
-                        <li>12:30pm - 1:30pm Vinyasa yoga</li>
+                        <li>6pm - 7pm Vinyasa yoga</li>
                       </ul>
                     </li>
                   </ul>
@@ -186,6 +181,8 @@
     </div>
 
     <div class="clearfix"></div>
+
+    <!-- MOBILE VIEW -->
 
     <div class="mob-show">
       <div class="">
@@ -277,12 +274,7 @@
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                   <ul class="timings-list">
-                    <li>5:30pm - 6:30pm Vinyasa yoga</li>
-                  </ul>
-                </li>
-                <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
-                  <ul class="timings-list">
-                    <li>12:30pm - 1:30pm Vinyasa yoga</li>
+                    <li>6pm - 7pm Vinyasa yoga</li>
                   </ul>
                 </li>
               </ul>
@@ -296,6 +288,11 @@
             <p class="margin-s-left margin-s-top">Drop in price for SLSC members £5, non-members £8</p>
             <div class="about-list swirls">
               <ul class="inline-b v-align margin-l-left">
+                <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
+                  <ul>
+                    <li>6:45pm - 7:45pm Candlelit vinyasa yoga</li>
+                  </ul>
+                </li>
                 <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                   <ul class="timings-list">
                     <li>11:30am - 12:30pm Vinyasa yoga</li>
