--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="about-list swirls">
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
-                  <ul>
+                  <ul class="timings-list">
                     <li>6:45pm - 7:45pm Candlelit vinyasa yoga</li>
                   </ul>
                 </li>
