piehouse online booking link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </h5>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <p class="margin-s-top margin-s-left">Online booking coming soon...</p>
+                <p class="margin-s-top margin-s-left"><a href="https://matchsticktheatre.com/yoga-at-the-piehouse/">Book online here...</a></p>
                 <div class="card-body about-list swirls">
                   <div id="matchstick-image"></div>
                   <ul class="inline-b v-align margin-l-left">
@@ -269,7 +269,7 @@
 
           <div>
             <h5 class="bold">Matchstick Pie House - New Cross</h5>
-            <p class="margin-s-top margin-s-left">Online booking coming soon...</p>
+            <p class="margin-s-top margin-s-left"><a href="https://matchsticktheatre.com/yoga-at-the-piehouse/">Book online here...</a></p>
             <div class="about-list swirls">
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Monday</p>
