added class for tootingbec lido

--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
                         <li>6:45pm - 7:45pm Candlelit vinyasa yoga</li>
                       </ul>
                     </li>
+                    <li class="no-bullet-point"><p class="day-of-week">Saturday</p>
+                      <ul>
+                        <li>8:30am - 9:30am Ashtanga yoga</li>
+                      </ul>
+                    </li>
                     <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                       <ul>
                         <li>11:30am - 12:30pm Vinyasa yoga</li>
@@ -291,6 +296,11 @@
                 <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                   <ul class="timings-list">
                     <li>6:45pm - 7:45pm Candlelit vinyasa yoga</li>
+                  </ul>
+                </li>
+                <li class="no-bullet-point"><p class="day-of-week">Saturday</p>
+                  <ul class="timings-list">
+                    <li>8:30am - 9:30am Ashtanga yoga</li>
                   </ul>
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
