added classes to battersea venue

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
                         <li>8:15am - 9:15am Hatha yoga</li>
                       </ul>
                     </li>
+                    <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
+                      <ul class="timings-list">
+                        <li>9:30am - 10:45am Hatha yoga</li>
+                      </ul>
+                    </li>
                     <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                       <ul class="timings-list">
                         <li>5pm - 6pm dynamic yoga</li>
@@ -219,6 +224,11 @@
                   <ul class="timings-list">
                     <li>7am - 8am dynamic Hatha</li>
                     <li>8:15am - 9:15am Hatha yoga</li>
+                  </ul>
+                </li>
+                <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
+                  <ul class="timings-list">
+                    <li>9:30am - 10:45am Hatha yoga</li>
                   </ul>
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
